PDF preview not correct when using clipmask and Blendmode DARKEN
Categories
(Firefox :: PDF Viewer, defect)
Tracking
()
People
(Reporter: finn, Assigned: lsalzman)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [pdfjs-c-rendering][pdfjs-d-smask][pdfjs-d-blend-mode])
Attachments
(6 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:75.0) Gecko/20100101 Firefox/75.0
Steps to reproduce:
Preview the attached PDF file in Firefox
Actual results:
The displayed image is not correct. When a clip mask is used in combination with Blendmode DARKEN, the clip mask is ignored.
Expected results:
Open the PDF file in Adobe Reader to see how the rendering is different for the object on the right.
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Comment 2•5 years ago
|
||
The severity field is not set for this bug.
:bdahl, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Any news about this defect? I keep receiving reports from people experiencing this problem.
Comment 4•4 years ago
|
||
Not sure when this was fixed, but it appears to render the same as acrobat now.
Sorry, but unfortunately this is NOT fully fixed. Please refer to the two screenshots I have just attached, where you can see that the shape to the right is not rendered correctly.
Comment 8•4 years ago
|
||
Here's what it looks like for me. This may be a windows specific bug, or it has been fixed in 92.
Comment 9•4 years ago
|
||
Checked my windows machine and it's broken there too.
Reporter | ||
Comment 10•4 years ago
|
||
:) I hope it's possible to fix this issue. It affects quite a few users.
Updated•4 years ago
|
Comment 11•4 years ago
|
||
(In reply to Brendan Dahl [:bdahl] from comment #9)
Checked my windows machine and it's broken there too.
Did you mean "broken" or "fixed"? :P
I can't reproduce on Linux.
Reporter | ||
Comment 12•4 years ago
|
||
This bug exists on Windows.
It seems to me that this bug is not really going anywhere, apart from the occasional doubtful comment whether the bug still exists.
What can I do to attract more attention?
Comment 13•4 years ago
|
||
(In reply to finn from comment #12)
This bug exists on Windows.
It seems to me that this bug is not really going anywhere, apart from the occasional doubtful comment whether the bug still exists.
What can I do to attract more attention?
We are not doubtful that you are seeing the bug, we are trying to narrow down where the problem appears as it will help us with the fix.
It's one thing if it fails everywhere, it's another thing if it only fails on Windows, and even another thing if it fails only on a specific version of Windows or on a specific graphics card.
Please don't edit the priority field, we will decide about the priority once we understand the problem better.
Comment 14•4 years ago
|
||
Yep I confirm the bug on windows 10 pro (v. 21H1).
I see the same thing as in https://bugzilla.mozilla.org/show_bug.cgi?id=1642583#c6.
:finn, please don't change the priority, we set it in considering our own workload (see https://wiki.mozilla.org/BMO/UserGuide/BugFields#priority).
Updated•4 years ago
|
Comment 15•4 years ago
|
||
If you want to try to fix the issue yourself or if you know someone who can help, we'll be happy to review a PR:
https://github.com/mozilla/pdf.js/
Updated•4 years ago
|
Comment 16•4 years ago
|
||
I open the pdf in using local pdf.js environment and I confirm again the bug in Firefox but neither in Chrome nor Edge.
So it's very likely a graphics issue and not a pdf.js one.
Comment 17•4 years ago
|
||
If I comment the line ctx.globalCompositeOperation = "darken";
the clipping operation is correct.
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 19•4 years ago
|
||
Updated•4 years ago
|
Comment 20•4 years ago
|
||
Comment 21•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Updated•4 years ago
|
Comment 22•4 years ago
|
||
Set release status flags based on info from the regressing bug 1303534
Comment 23•4 years ago
|
||
Seems like this patch has a nice risk vs. reward ratio given the simplicity of the patch and the huge number of bugs it fixed - should we consider taking this (and bug 1336591) on ESR too?
Assignee | ||
Comment 24•4 years ago
|
||
Comment on attachment 9253489 [details]
Bug 1642583 - Push clips when applying D2D blend effect. r?jrmuizel
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Visual artifacts in PDF.js (and all Canvas2D) on Windows.
- User impact if declined: Primitives in PDF.js (and all Canvas2D) don't clip properly on Windows leading to significant visual artifacting.
- Fix Landed on Version: 96
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively small change that essentially just undoes an ancient regressing bug.
- String or UUID changes made by this patch:
Comment 25•4 years ago
|
||
Comment on attachment 9253489 [details]
Bug 1642583 - Push clips when applying D2D blend effect. r?jrmuizel
Simple fix which resolves a lot of longstanding rendering issues, approved for 91.5esr.
Comment 26•4 years ago
|
||
bugherder uplift |
Description
•