Bug 1642583 - Push clips when applying D2D blend effect. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D132723